--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=66221acd3be5b367ab8e",
-    "/css/app.css": "/css/app.css?id=7b26f3c1f621ce06a0f8"
+    "/js/app.js": "/js/app.js?id=99053d2ee1d976d90b81",
+    "/css/app.css": "/css/app.css?id=f73ec1e8197baba56b58",
+    "/js/app.js.map": "/js/app.js.map?id=64fec8b5e38827763034"
 }
