--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=df46ccdc492d72d177d4",
-    "/css/app.css": "/css/app.css?id=8975f949ae0d628be30f",
-    "/js/app.js.map": "/js/app.js.map?id=bc89371c6eae6614b45a"
+    "/js/app.js": "/js/app.js?id=42f35462e337ba171e95",
+    "/css/app.css": "/css/app.css?id=e597b9e38ef8f9bf5758"
 }
