--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=42f35462e337ba171e95",
-    "/css/app.css": "/css/app.css?id=e597b9e38ef8f9bf5758"
+    "/app/app.js": "/app/app.js?id=e9deacd40d6d6b47c7c9",
+    "/app/app.css": "/app/app.css?id=e597b9e38ef8f9bf5758"
 }
