--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "cross-env process.env.section=app NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
         "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "hot": "cross-env process.env.section=app NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env process.env.section=app NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "admin-dev": "npm run admin-development",
+        "admin-development": "cross-env process.env.section=admin NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "admin-watch": "npm run admin-development -- --watch",
+        "watch-watch-poll": "npm run admin-watch -- --watch-poll",
+        "admin-hot": "cross-env process.env.section=admin NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "admin-prod": "npm run admin-production",
+        "admin-production": "cross-env process.env.section=admin NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "dependencies": {
         "@fullhuman/postcss-purgecss": "^1.3.0",
@@ -17,6 +24,7 @@
         "eslint": "^5.16.0",
         "eslint-plugin-vue": "^5.2.3",
         "laravel-mix": "^5.0.1",
+        "laravel-mix-merge-manifest": "^0.1.2",
         "lodash": "^4.17.15",
         "postcss-import": "^12.0.1",
         "postcss-nesting": "^7.0.1",
@@ -24,6 +32,13 @@
         "tailwindcss": "^1.2.0-canary.5",
         "vue": "^2.6.11",
         "vue-meta": "^2.3.1",
-        "vue-template-compiler": "^2.6.11"
+        "vue-template-compiler": "^2.6.11",
+        "vuetify": "^2.2.31"
+    },
+    "devDependencies": {
+        "@mdi/font": "^5.3.45",
+        "bootstrap": "^4.0.0",
+        "jquery": "^3.2",
+        "popper.js": "^1.12"
     }
 }
