feat: add hard visit helper function

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "helpers/InertiaHelper.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
