--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "spatie/laravel-permission": "^3.13",
         "tightenco/ziggy": "^0.9.3"
     },
     "require-dev": {
