--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "bootstrap": "^4.0.0",
         "jquery": "^3.2",
         "npm-run-all": "^4.1.5",
-        "popper.js": "^1.12"
+        "popper.js": "^1.12",
+        "tailwindcss-plugins": "^0.3.0"
     }
 }
