feat: vendor mix config, refactor

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "private": true,
     "scripts": {
-        "build": "npm-run-all prod user-prod admin-prod",
+        "build": "npm-run-all vendor prod user-prod admin-prod",
         "watch-all": "npm-run-all --parallel watch user-watch admin-watch",
+        "vendor": "cross-env process.env.section=vendor NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "dev": "npm run development",
         "development": "cross-env process.env.section=app NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
@@ -46,6 +47,7 @@
     },
     "devDependencies": {
         "@mdi/font": "^5.3.45",
+        "alpinejs": "^2.3.5",
         "bootstrap": "^4.0.0",
         "jquery": "^3.2",
         "npm-run-all": "^4.1.5",
