--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "postcss-nesting": "^7.0.1",
         "resolve-url-loader": "^2.3.2",
         "tailwindcss": "^1.2.0-canary.5",
+        "tailwindcss-animatecss": "^1.0.7",
         "vue": "^2.6.11",
         "vue-meta": "^2.3.1",
         "vue-template-compiler": "^2.6.11",
