--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
         "vue": "^2.6.11",
         "vue-meta": "^2.3.1",
         "vue-template-compiler": "^2.6.11",
-        "vuetify": "^2.2.31"
+        "vuetify": "^2.2.31",
+        "vuex": "^3.4.0"
     },
     "devDependencies": {
         "@mdi/font": "^5.3.45",
