--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
         "postcss-import": "^12.0.1",
         "postcss-nesting": "^7.0.1",
         "resolve-url-loader": "^2.3.2",
+        "sass": "^1.26.8",
+        "sass-loader": "^8.0.2",
+        "selo": "^1.1.0",
+        "sortablejs": "^1.10.2",
         "tailwindcss": "^1.2.0-canary.5",
         "tailwindcss-animatecss": "^1.0.7",
         "vue": "^2.6.11",
