--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,9 @@ image: edbizarro/gitlab-ci-pipeline-php:7.4
 # Variables
 variables:
   MYSQL_ROOT_PASSWORD: root
-  MYSQL_USER: mysql_user
-  MYSQL_PASSWORD: mysql_password
-  MYSQL_DATABASE: mysql_db
+  MYSQL_USER: homestead
+  MYSQL_PASSWORD: secret
+  MYSQL_DATABASE: homestead
   DB_HOST: mysql
 
 cache:
