--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,14 +4,14 @@ stages:
   - testing
   - security
 
-image: edbizarro/gitlab-ci-pipeline-php:7.4
+image: edbizarro/gitlab-ci-pipeline-php:7.3
 
 # Variables
 variables:
   MYSQL_ROOT_PASSWORD: root
-  MYSQL_USER: homestead
-  MYSQL_PASSWORD: secret
-  MYSQL_DATABASE: homestead
+  MYSQL_USER: mysql_user
+  MYSQL_PASSWORD: mysql_password
+  MYSQL_DATABASE: mysql_db
   DB_HOST: mysql
 
 cache:
